--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="<%= stylesheetUrl %>">
   </head>
 
   <body>
     <p>Hello world</p>
+
+    <script src="<%= javascriptUrl %>"></script>
   </body>
 </html>
