--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!doctype html>
-<html>
+<html ng-app="Lido">
   <head>
-    <title>Journal</title>
+    <title>Lido</title>
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter|Lato">
     <link rel="stylesheet" href="<%= stylesheetUrl %>">
+
+    <base href="/">
   </head>
 
-  <body>
-    <p>Hello world</p>
+  <body ng-controller="ApplicationController">
+    <div class="container">
+      <div ng-view></div>
+    </div>
 
     <script src="<%= javascriptUrl %>"></script>
   </body>
