Add nav bar with Home and New links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
   <body ng-controller="ApplicationController">
     <div class="container">
+      <nav class="primary-nav">
+        <a ng-href="/">Home</a>
+        <a ng-href="/notes/new">New note</a>
+      </nav>
+
       <div ng-view></div>
     </div>
 
