Add simplemde CSS and JS to index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter|Lato">
     <link rel="stylesheet" href="<%= stylesheetUrl %>">
 
@@ -23,6 +24,7 @@
       <div ng-view></div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <script src="<%= javascriptUrl %>"></script>
   </body>
 </html>
