--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/public/build.js" defer></script>
+    <script src="/assets/build.js" defer></script>
   </body>
 </html>
